fix extra wide nav on tablets

--- a/app/assets/css/yeoman.css
+++ b/app/assets/css/yeoman.css
@@ -529,6 +529,7 @@ pre{
 
   nav ul li {
     display: inline;
+    white-space: normal;
     margin-right: 10px;
   }
 
